--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+EMAIL_USER="durbeksaydaliyev798@gmail.com"
+EMAIL_PASSWORD="FBC277AFF818E599C4CCFEFC8371E0C8B945" 
